tests/ui/cast/raw-ptr-to-dyn-fn-raw-ptr.stderr
error[E0277]: expected an `Fn()` closure, found `()`
  --> $DIR/raw-ptr-to-dyn-fn-raw-ptr.rs:6:16
   |
LL |         &mut *(ptr as *mut dyn Fn())
   |                ^^^ expected an `Fn()` closure, found `()`
   |
   = help: the trait `Fn()` is not implemented for `()`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`
   = note: required for the cast from `*mut ()` to `*mut dyn Fn()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
